# NexScrape

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: book_scraper.py  browser_scrape.ts  example_spider.py  simple_scrape.rs
nexscrape-browser/: local_test.ts  package-lock.json  package.json  test_runner.ts  tsconfig.json
nexscrape-browser/src/: index.ts  page-controller.ts
nexscrape-browser/src/modules/: interact.ts  network.ts  wait.ts
nexscrape-cli/: Cargo.toml
nexscrape-cli/src/: main.rs
nexscrape-core/: Cargo.toml
nexscrape-core/src/: lib.rs
nexscrape-core/src/anti_detection/: captcha.rs  fingerprint.rs  human_sim.rs  mod.rs  stealth.rs
nexscrape-core/src/engine/: http.rs  mod.rs  scheduler.rs
nexscrape-core/src/middleware/: cache.rs  fingerprint.rs  mod.rs  pipeline.rs  proxy.rs  ratelimit.rs  retry.rs
nexscrape-core/src/parser/: html.rs  json.rs  mod.rs  schema.rs
nexscrape-core/src/storage/: bloom.rs  export.rs  mod.rs  queue.rs
nexscrape-picker/: package-lock.json  package.json  tsconfig.json
nexscrape-picker/.nexscrape/: books.toscrape.com.schema.json
nexscrape-picker/scripts/: build-overlay.js
nexscrape-picker/src/: cli.ts  contracts.ts  index.ts
nexscrape-picker/src/browser/: session.ts
nexscrape-picker/src/engine/: analysis-engine.ts  element-analyzer.ts  selector-generator.ts
nexscrape-picker/src/schema/: schema-writer.ts
nexscrape-picker/src/ui/: picker-overlay.css  picker-overlay.ts
nexscrape-picker/src/utils/: text-fixer.ts
nexscrape-python/: pyproject.toml
nexscrape-python/nexscrape/: __init__.py  config.py  item.py  request.py  response.py  spider.py
nexscrape-python/tests/: test_core.py
test-site/: package-lock.json  package.json  server.js
test-site/public/: index.html  signin.html  signup.html
