[workspace]
resolver = "2"
members = [
    "nexscrape-core",
    "nexscrape-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NexScrape Contributors"]
license = "MIT"
repository = "https://github.com/nexscrape/nexscrape"
description = "Next-generation high-performance web scraping library"
readme = "README.md"
keywords = ["web-scraping", "crawler", "spider", "http", "async"]
categories = ["web-programming::http-client", "command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
scraper = "0.20"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
regex = "1"
async-trait = "0.1"
futures = "0.3"
dashmap = "6"
bytes = "1"
http = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
anyhow = "1"
