[package]
name = "nexscrape-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for NexScrape web scraping"

[[bin]]
name = "nex"
path = "src/main.rs"

[dependencies]
nexscrape-core = { path = "../nexscrape-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
