[package]
name = "nexscrape-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for NexScrape — high-performance web scraping"
readme = "../README.md"

[lib]
name = "nexscrape_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }

# PyO3 for Python bindings (optional feature)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
