[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nexscrape"
version = "0.1.0"
description = "Next-generation high-performance web scraping library"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NexScrape Contributors"}
]
keywords = ["web-scraping", "crawler", "spider", "http", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/nexscrape/nexscrape"
Repository = "https://github.com/nexscrape/nexscrape"
Documentation = "https://github.com/nexscrape/nexscrape#readme"
Issues = "https://github.com/nexscrape/nexscrape/issues"

[tool.maturin]
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
